# hdf5-rs

./: .gitignore  Cargo.toml  README.md
crates/hdf5/: Cargo.toml
crates/hdf5-format/: Cargo.toml
crates/hdf5-format/src/: btree_v1.rs  checksum.rs  global_heap.rs  lib.rs  local_heap.rs  object_header.rs  superblock.rs  symbol_table.rs
crates/hdf5-format/src/chunk_index/: btree_v2.rs  extensible_array.rs  fixed_array.rs  mod.rs
crates/hdf5-format/src/messages/: attribute.rs  continuation.rs  data_layout.rs  dataspace.rs  datatype.rs  fill_value.rs  filter.rs  group_info.rs  link.rs  link_info.rs  mod.rs
crates/hdf5-format/src/zstd/: bitstream.rs  compress.rs  constants.rs  decode.rs  fse.rs
crates/hdf5-format/tests/: zstd_fse_debug.rs  zstd_ratio.rs  zstd_speed.rs  zstd_vs_c.rs
crates/hdf5-io/: Cargo.toml
crates/hdf5-io/src/: file_handle.rs  lib.rs  reader.rs  swmr.rs  writer.rs
crates/hdf5/benches/: io_bench.rs
crates/hdf5/examples/: basic.rs
crates/hdf5/src/: attribute.rs  dataset.rs  error.rs  file.rs  group.rs  lib.rs  swmr.rs  types.rs
