[package]
name = "hdf5"
description = "Pure Rust HDF5 library with full SWMR support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
hdf5-format = { path = "../hdf5-format" }
hdf5-io = { path = "../hdf5-io" }
